--- a/config/3800.config
+++ b/config/3800.config
@@ -36,6 +36,15 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_pdnsd=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_dns2socks=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_v2ray-plugin is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_simple-obfs is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus=y is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_obfs is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server is not set
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set #adbyby去广告	
 # CONFIG_PACKAGE_luci-app-webadmin is not set #Web管理页面设置
 # CONFIG_PACKAGE_luci-app-filetransfer is not set #系统-文件传输
@@ -63,6 +72,7 @@ CONFIG_PACKAGE_luci-app-vlmcsd=y #KMS激活服务器
 # CONFIG_PACKAGE_luci-app-netdata is not set #Netdata实时监控(图表)
 # CONFIG_PACKAGE_luci-app-cpufreq is not set #CPU 性能优化调节
 # CONFIG_PACKAGE_luci-app-kodexplorer is not set
+CONFIG_PACKAGE_luci-app-sfe=y
 CONFIG_PACKAGE_luci-theme-argon=y
 # CONFIG_PACKAGE_luci-theme-atmaterial is not set
 # CONFIG_PACKAGE_luci-theme-bootstrap is not set
