--- a/config/3800.config
+++ b/config/3800.config
@@ -12,12 +12,10 @@ CONFIG_TARGET_ar71xx_generic_DEVICE_wndr3800=y
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
 # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
 # CONFIG_PACKAGE_luci-app-samba is not set
-# CONFIG_PACKAGE_luci-app-smartdns is not set
 # CONFIG_PACKAGE_luci-app-sqm is not set
 # CONFIG_PACKAGE_luci-app-oaf is not set #应用过滤
 # CONFIG_PACKAGE_luci-app-serverchan is not set #微信推送
 # CONFIG_PACKAGE_luci-app-adguardhome is not set #ADguardHome去广告服务
-# CONFIG_PACKAGE_luci-app-smartdns-compat is not set #SmartDns服务
 # CONFIG_PACKAGE_luci-app-unblockmusic is not set #解锁网易云灰色歌曲
 # CONFIG_UnblockNeteaseMusic_Go is not set #解锁网易云灰色歌曲
 CONFIG_PACKAGE_luci-app-passwall=y
@@ -36,24 +34,15 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_pdnsd=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_dns2socks=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_v2ray-plugin is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_simple-obfs is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus=y is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_obfs is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun is not set
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server is not set
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set #adbyby去广告	
 # CONFIG_PACKAGE_luci-app-webadmin is not set #Web管理页面设置
 # CONFIG_PACKAGE_luci-app-filetransfer is not set #系统-文件传输
 # CONFIG_PACKAGE_luci-app-qos-gargoyle is not set #Gargoyle QoS流控
 # CONFIG_PACKAGE_luci-app-filebrowser is not set #文件浏览器
 # CONFIG_PACKAGE_luci-app-autoreboot is not set #定时重启
-CONFIG_PACKAGE_luci-app-frpc=y #Frp内网穿透
+# CONFIG_PACKAGE_luci-app-frpc is not set #Frp内网穿透
 # CONFIG_PACKAGE_luci-app-frps is not set #Frp内网穿透服务器
-CONFIG_PACKAGE_luci-app-upnp=y #通用即插即用UPnP(端口自动转发)
+# CONFIG_PACKAGE_luci-app-upnp is not set #通用即插即用UPnP(端口自动转发)
 # CONFIG_PACKAGE_luci-app-softethervpn is not set #SoftEtherVPN服务器
 CONFIG_PACKAGE_luci-app-vlmcsd=y #KMS激活服务器
 # CONFIG_PACKAGE_luci-app-sqm is not set #SQM智能队列管理
@@ -72,7 +61,9 @@ CONFIG_PACKAGE_luci-app-vlmcsd=y #KMS激活服务器
 # CONFIG_PACKAGE_luci-app-netdata is not set #Netdata实时监控(图表)
 # CONFIG_PACKAGE_luci-app-cpufreq is not set #CPU 性能优化调节
 # CONFIG_PACKAGE_luci-app-kodexplorer is not set
-CONFIG_PACKAGE_luci-app-sfe=y
+# CONFIG_PACKAGE_luci-app-sfe is not set
+# CONFIG_PACKAGE_shadowsocks-libev-ss-server is not set
+# CONFIG_PACKAGE_shadowsocksr-libev-server is not set
 CONFIG_PACKAGE_luci-theme-argon=y
 # CONFIG_PACKAGE_luci-theme-atmaterial is not set
 # CONFIG_PACKAGE_luci-theme-bootstrap is not set
