--- a/config/r7800.config
+++ b/config/r7800.config
@@ -50,7 +50,7 @@ CONFIG_PACKAGE_luci-app-ddns=y #DDNS服务
 # CONFIG_PACKAGE_luci-app-nlbwmon is not set #宽带流量监控
 # CONFIG_PACKAGE_luci-app-flowoffload is not set #Turbo ACC 网络加速
 # CONFIG_PACKAGE_luci-app-guest-wifi is not set #WiFi访客网络
-# CONFIG_PACKAGE_luci-app-netdata is not set #Netdata实时监控(图表)
+# CONFIG_PACKAGE_luci-app-netdata is not set #Netdata实时监控
 # CONFIG_PACKAGE_luci-app-cpufreq is not set #CPU 性能优化调节
 # CONFIG_PACKAGE_luci-app-sfe is not set
 CONFIG_PACKAGE_luci-app-kodexplorer=y
