--- a/config/3800.config
+++ b/config/3800.config
@@ -27,7 +27,7 @@ CONFIG_PACKAGE_luci-app-passwall=y
 # CONFIG_PACKAGE_luci-app-autoreboot is not set #定时重启
 # CONFIG_PACKAGE_luci-app-frpc is not set #Frp内网穿透
 # CONFIG_PACKAGE_luci-app-frps is not set #Frp内网穿透服务器
-# CONFIG_PACKAGE_luci-app-upnp is not set #通用即插即用UPnP(端口自动转发)
+# CONFIG_PACKAGE_luci-app-upnp is not set #通用即插即用UPnP(端口转发)
 # CONFIG_PACKAGE_luci-app-softethervpn is not set #SoftEtherVPN服务器
 CONFIG_PACKAGE_luci-app-vlmcsd=y #KMS激活服务器
 # CONFIG_PACKAGE_luci-app-sqm is not set #SQM智能队列管理
