--- a/config/3800.config
+++ b/config/3800.config
@@ -26,7 +26,7 @@ CONFIG_TARGET_ar71xx_generic_DEVICE_wndr3800=y
 # CONFIG_PACKAGE_luci-app-autoreboot is not set #定时重启
 # CONFIG_PACKAGE_luci-app-frpc is not set #Frp内网穿透
 # CONFIG_PACKAGE_luci-app-frps is not set #Frp内网穿透服务器
-# CONFIG_PACKAGE_luci-app-upnp is not set #通用即插即用UPnP(端口转发)
+# CONFIG_PACKAGE_luci-app-upnp is not set #通用即插即用UPnP(转发)
 # CONFIG_PACKAGE_luci-app-softethervpn is not set #SoftEtherVPN服务器
 # CONFIG_PACKAGE_luci-app-vlmcsd is not set #KMS激活服务器
 # CONFIG_PACKAGE_luci-app-sqm is not set #SQM智能队列管理
